package Payment;

public interface Payment {
    public boolean processPayment();
}
