package Reservation;

public enum ReservationStatus {
    BOOKED,
    CANCELLED,
    COMPLETED
}
