package car;

public enum CarStatus {
    Avaiable,
    Booked,
    Out
}
