package car;

public enum CarType {
    LUXURY,
    NORMAL
}
